CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)

set(PKGNAME nvtx)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

CUDA_ADD_LIBRARY(${PKGNAME} MODULE
  "nvtx.c"
)
TARGET_LINK_LIBRARIES(${PKGNAME} ${CUDA_LIBRARIES} -L${CUDA_TOOLKIT_ROOT_DIR}/lib nvToolsExt)

INSTALL(TARGETS ${PKGNAME} LIBRARY
  DESTINATION ${LUA_CPATH})

FILE(GLOB luafiles *.lua)

INSTALL(FILES ${luafiles}
  DESTINATION ${LUA_PATH}/${PKGNAME})
